benchmark-results/8/merge/cseq/concurrentwitness2test.2024-11-27_10-15-16.logfiles/SV-COMP23_unreach-call.cseq-rfi010.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/rfi010.yml/rfi010.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/rfi010.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_x1c8alab/tmp/tmpatmyorgx.c
Compilation started
/tmp/BenchExec_run_x1c8alab/tmp/tmpatmyorgx.c: In function ‘P0’:
/tmp/BenchExec_run_x1c8alab/tmp/tmpatmyorgx.c:566:19: error: ‘FALSE’ undeclared (first use in this function)
  566 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_x1c8alab/tmp/tmpatmyorgx.c:566:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_x1c8alab/tmp/tmpatmyorgx.c: In function ‘P1’:
/tmp/BenchExec_run_x1c8alab/tmp/tmpatmyorgx.c:605:19: error: ‘FALSE’ undeclared (first use in this function)
  605 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_x1c8alab/tmp/tmpatmyorgx.c:606:19: error: ‘TRUE’ undeclared (first use in this function)
  606 |   weak$$choice2 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
